--- a/MuoiCu_Server/package.json
+++ b/MuoiCu_Server/package.json
@@ -15,6 +15,7 @@
     "easy-pdf-merge": "^0.2.2",
     "express": "~4.16.0",
     "express-handlebars": "^3.0.2",
+    "forever": "^3.0.0",
     "formidable": "^1.2.1",
     "handlebars": "^4.1.2",
     "hbs": "~4.0.1",
