--- a/MuoiCu_Server/package.json
+++ b/MuoiCu_Server/package.json
@@ -25,6 +25,8 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "nodemailer": "^6.6.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "puppeteer": "^1.14.0",
