--- a/MuoiCu_Server/.env
+++ b/MuoiCu_Server/.env
@@ -1,9 +1,10 @@
 PORT=8080
-USERNAME=root
-PASSWORD=
-DATABASE=quanlynhaxe
+DB_USER=root
+DB_PASS=
+DB_NAME=quanlynhaxe
 HOST=localhost
 LIMIT=10
 secret_key=secret_key
 expires_in=2h
 LOG=/data/
+ENABLE_EMAIL=true
