--- a/MuoiCu_Server/package.json
+++ b/MuoiCu_Server/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "puppeteer": "^1.14.0",
+    "request": "^2.88.2",
     "socket.io": "^2.2.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0",
