--- a/MuoiCu_Server/.env
+++ b/MuoiCu_Server/.env
@@ -7,4 +7,9 @@ LIMIT=20
 secret_key=secret_key
 expires_in=2h
 LOG=/data/
-ENABLE_EMAIL=true
+ENABLE_EMAIL=false
+ENABLE_ZNS=false
+ENABLE_ZCC=false
+ZALO_APPID=619166244360530229
+ZALO_OA_DOMAIN=https://oauth.zaloapp.com/v4/oa/access_token
+ZALO_BUS_DOMAIN=https://business.openapi.zalo.me/message/template
