--- a/MuoiCu_Server/.env
+++ b/MuoiCu_Server/.env
@@ -1,9 +1,9 @@
 PORT=8080
 DB_USER=root
-DB_PASS=
+DB_PASS=12121993a
 DB_NAME=quanlynhaxe
 HOST=localhost
-LIMIT=10
+LIMIT=20
 secret_key=secret_key
 expires_in=2h
 LOG=/data/
