--- a/MuoiCu_Server/.env
+++ b/MuoiCu_Server/.env
@@ -13,3 +13,4 @@ ENABLE_ZCC=false
 ZALO_APPID=619166244360530229
 ZALO_OA_DOMAIN=https://oauth.zaloapp.com/v4/oa/access_token
 ZALO_BUS_DOMAIN=https://business.openapi.zalo.me/message/template
+PORT_APP=3002
