--- a/app/package.json
+++ b/app/package.json
@@ -100,6 +100,7 @@
     "gulp-if": "^2.0.2",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.1.3",
     "gulp-stylus": "^2.7.0",
     "gulp-touch-cmd": "0.0.1",
     "gulp-uglify-es": "^1.0.4",
