--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,7 @@
     "xlsx": "^0.14.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "gulp live",
     "build": "gulp dev",
     "gulp": "gulp",
     "dev": "gulp dev",
@@ -80,7 +80,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer-stylus": "^0.14.0",
-    "babel-plugin-jsx-control-statements": "^4.1.0",
+    "babel-plugin-jsx-control-statements": "^4.1.2",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.12",
     "browserify": "^16.5.2",
