--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
     "build": "gulp dev",
     "gulp": "gulp",
     "dev": "gulp dev",
-    "prod": "gulp prod"
+    "prod": "gulp prod",
+    "pretty": "prettier --write \"./**/*.{js,jsx}\""
   },
   "homepage": "./",
   "main": "src/index.js",
@@ -108,6 +109,7 @@
     "gulp-util": "^3.0.8",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
+    "prettier": "^2.7.1",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3",
     "vinyl-buffer": "^1.0.1",
