--- a/app/package.json
+++ b/app/package.json
@@ -83,7 +83,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "autoprefixer-stylus": "^0.14.0",
-    "babel-plugin-jsx-control-statements": "^4.1.2",
+    "babel-plugin-jsx-control-statements": "git+https://github.com/react-plugin/jsx-control-statements",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.12",
     "browserify": "^16.5.2",
