--- a/MuoiCu_Server/package.json
+++ b/MuoiCu_Server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "server2": "node app2.js"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
