--- a/MuoiCu_Server/package.json
+++ b/MuoiCu_Server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "server2": "node app2.js"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "mysql2": "^3.14.0",
     "nodemailer": "^6.6.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.4.0",
@@ -39,6 +40,6 @@
     "xlsx": "^0.14.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.19.4"
   }
 }
